see if deleting .git helped

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1 class="hero-title">Welcome to My Space</h1>
-            <p class="hero-subtitle">Placeholder tagline - Your journey starts here. Unfortunately. Now fuck off.</p>
+            <h1 class="hero-title">Martín Zamorano</h1>
+            <p class="hero-subtitle">The Man. The Legend</p>
             <div class="hero-buttons">
-                <a href="projects.html" class="btn btn-primary">Explore Projects</a>
+                <a href="projects.html" class="btn btn-primary">Meet the team behind Martin Zamorano</a>
                 <a href="downloads.html" class="btn btn-secondary">Get Resources</a>
             </div>
         </div>
