--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
         </div>
     </section>
 
+    <section class="newsletter-section">
+        <div class="container">
+            <div class="newsletter-box">
+                <h2>🎪 Join the Madness!</h2>
+                <p>Subscribe to experience something truly... unforgettable</p>
+                <form class="newsletter-form" onsubmit="event.preventDefault(); window.location.href='madness.html';">
+                    <input type="email" placeholder="Enter your email" class="newsletter-input" required>
+                    <button type="submit" class="btn-madness">Join the Madness</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="container">
             <p>&copy; 2026 Martin Zamorano. All rights reserved.</p>
