--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
                     <a href="projects.html" class="card-link">Learn More →</a>
                 </div>
                 <div class="card">
+                    <div class="card-icon">🎮</div>
+                    <h3>Labyrinth Game</h3>
+                    <p>Test your skills in our maze challenge!</p>
+                    <a href="labyrinth.html" class="card-link">Play Now →</a>
+                </div>
+                <div class="card">
                     <div class="card-icon">⬇️</div>
                     <h3>Downloads</h3>
                     <p>Access resources, files, and materials.</p>
