Update game elements to enhance theme and user experience, including changing goal icon to piano and updating win message with image of Martin.

--- a/labyrinth.html
+++ b/labyrinth.html
@@ -9,7 +9,7 @@
 <body>
     <div class="game-container">
         <div class="header">
-            <h1>🎮 Bring Martin to the Show</h1>
+            <h1>Bring Martin to the Show</h1>
             <p>Use arrow keys to navigate him through the maze!</p>
             <a href="index.html" class="back-button">← Back to Home</a>
         </div>
@@ -49,16 +49,16 @@
         </div>
 
         <div class="controls">
-            <p>🎯 Reach the goal to advance to the next level!</p>
+            <p>🎹 Reach the piano to advance to the next level!</p>
             <button id="resetBtn" class="game-button">Reset Level</button>
             <button id="newGameBtn" class="game-button">New Game</button>
         </div>
 
         <div id="winMessage" class="win-message hidden">
-            <div class="win-content"></div>
-                <h2>🎉 Level Complete!</h2>
+            <div class="win-content">
+                <h2>Level Complete.</h2>
                 <p id="winStats"></p>
-                <button id="nextLevelBtn" class="game-button">Next Level</button>
+                <button id="nextLevelBtn" class="game-button">Try Again</button>
             </div>
         </div>
 
@@ -66,7 +66,7 @@
             <h3>How to Play:</h3>
             <ul>
                 <li>Use <kbd>↑</kbd> <kbd>↓</kbd> <kbd>←</kbd> <kbd>→</kbd> arrow keys to move</li>
-                <li>Navigate through the maze to reach the 🎯 goal</li>
+                <li>Navigate through the maze to reach the 🎹 piano</li>
                 <li>Avoid walls</li>
                 <li>Each level gets progressively harder</li>
             </ul>
