labyrinth give up

--- a/labyrinth.html
+++ b/labyrinth.html
@@ -56,9 +56,10 @@
 
         <div id="winMessage" class="win-message hidden">
             <div class="win-content">
-                <h2>Level Complete.</h2>
+                <h2>🎉 Level Complete!</h2>
                 <p id="winStats"></p>
-                <button id="nextLevelBtn" class="game-button">Try Again</button>
+                <button id="nextLevelBtn" class="game-button">Next Level</button>
+                <a href="labyrinth-giveup.html" class="game-button" style="display: inline-block; text-decoration: none;">Give Up</a>
             </div>
         </div>
 
