Add bodyguard slap challenge to Kontakt page

--- a/labyrinth-giveup.html
+++ b/labyrinth-giveup.html
@@ -37,8 +37,8 @@
     <div class="game-container">
         <div class="giveup-container">
             <div class="header">
-                <h1>You Gave Up! 😔</h1>
-                <p>Martin is disappointed in you...</p>
+                <h1>You Gave Up!</h1>
+                <p>Biatch.</p>
             </div>
             
             <img src="assets/images/Screenshot 2026-02-21 at 00.26.23.png" alt="Martin's disappointment" class="giveup-image">
